<?xml version="1.0"?>
<package>
  <name>libmavconn</name>
  <version>0.8.2</version>
  <description>
    MAVLink communication library.
    This library provide unified connection handling classes
    and URL to connection object mapper.

    This library can be used in standalone programs.
  </description>

  <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>
  <author email="vooon341@gmail.com">Vladimir Ermakov</author>
  <license>GPLv3</license>
  <license>LGPLv3</license>

  <url type="website">http://wiki.ros.org/mavros</url>
  <url type="repository">https://github.com/mavlink/mavros.git</url>
  <url type="bugtracker">https://github.com/mavlink/mavros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>console_bridge</build_depend>
  <run_depend>boost</run_depend>
  <run_depend>console_bridge</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
