<?xml version="1.0"?>
<package format="2">
  <name>libmavconn</name>
  <version>1.9.0</version>
  <description>
    MAVLink communication library.
    This library provide unified connection handling classes
    and URL to connection object mapper.

    This library can be used in standalone programs.
  </description>

  <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>
  <author email="vooon341@gmail.com">Vladimir Ermakov</author>
  <license>GPLv3</license>
  <license>LGPLv3</license>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/mavros</url>
  <url type="repository">https://github.com/mavlink/mavros.git</url>
  <url type="bugtracker">https://github.com/mavlink/mavros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>mavlink</depend>
  <depend>libconsole-bridge-dev</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>gtest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
