<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libmavconn</name>
  <version>2.6.0</version>
  <description>
    MAVLink communication library.
    This library provide unified connection handling classes
    and URL to connection object mapper.

    This library can be used in standalone programs.
  </description>

  <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer>

  <license>GPLv3</license>
  <license>LGPLv3</license>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/mavros</url>
  <url type="repository">https://github.com/mavlink/mavros.git</url>
  <url type="bugtracker">https://github.com/mavlink/mavros/issues</url>

  <author email="vooon341@gmail.com">Vladimir Ermakov</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>asio</depend>
  <depend>mavlink</depend>
  <depend>libconsole-bridge-dev</depend>
  <build_depend>python3-empy</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>
